<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exobold"
            android:text="@string/Enter"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Authorization" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="100dp"
        android:paddingRight="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorBlock"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/exoregular"
                android:gravity="center_vertical"
                android:hint="@string/Login"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorTextSecond"
                android:textColorHint="@color/notImportant"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorBlock"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/exoregular"
                android:gravity="center_vertical"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textColor="@color/colorTextSecond"
                android:textColorHint="@color/notImportant"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/TextAdmin"
            android:textColor="@color/descText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="50dp">

        <Button
            android:id="@+id/EnterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorMain"
            android:fontFamily="@font/exosemibold"
            android:text="@string/Enter2"
            android:textColor="@color/colorText"
            android:textColorHighlight="@color/onButton"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/onButton" />
    </LinearLayout>

</LinearLayout>