<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="53dp"
    android:paddingRight="53dp"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:src="@drawable/logostart" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/button_img_black" />

        <TextView
            android:id="@+id/EntryScreenMainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/exoregular"
            android:text="@string/ThreeStepsEntry"
            android:textColor="@color/colorMain"
            android:textSize="18sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="@color/colorMain"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:fontFamily="@font/exobold"
                    android:text="@string/one"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/EntryScreenFirstText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exosemibold"
            android:paddingLeft="20dp"
            android:text="@string/FirstTaskEntry"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="@color/colorMain"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:fontFamily="@font/exobold"
                    android:text="@string/two"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/EntryScreenSecondText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exosemibold"
            android:paddingLeft="20dp"
            android:text="@string/SecondTaskEntry"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:cardBackgroundColor="@color/colorMain"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:fontFamily="@font/exobold"
                    android:text="@string/three"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/EntryScreenThirdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/exosemibold"
            android:paddingLeft="20dp"
            android:text="@string/ThirdTaskEntry"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/ToMainScreenBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorMain"
            android:fontFamily="@font/exosemibold"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/go"
            android:textColor="@color/colorText"
            android:textColorHighlight="@color/onButton"
            android:textSize="20sp"
            app:rippleColor="@color/onButton" />
    </LinearLayout>

</LinearLayout>